# marvain

./: .gitignore  ADVANCED_FEATURE_IMPLEMENTATION_PLAN.md  ADVANCED_FEATURE_PLAN.md  AGENTS.md  FEB_06_2025_GAP_ANALYSIS_PLAN.md  GAPANALYSIS.md  MARVAIN_IMPLEMENTATION_PLAN.md  MARVAIN_PRODUCTION_SPECIFICATIONS.md  Makefile  ORTHOGONAL_GUI_AUDIT.md  QUICKSTART.md  QUICKSTART_GUI.md  README.md  README.md~  _commit.py  activate  check_rooms.py  check_session_methods.py  clear_livekit_rooms.py  environment.yaml  initwyw  marvain_activate  pyproject.toml  requirements.txt  requirements.txt~  round_6_plan.md  round_6_plan_multiagent.md  samconfig.toml  template.yaml  template.yaml~  test_typed_chat.py
.augment/rules/: default.md
.github/workflows/: ci.yml  codeql.yml  e2e-contracts.yml
.ignore/: GUI_ARCHITECTURE_PLAN.md  GUI_IMPLEMENTATION_PLAN_V2.md
agent_core/: __init__.py  actions.py  aws_model_client.py  llm_client.py  logging_utils.py  memory_store.py  planner.py  schema.py  speech.py  tools.py  utils.py  voice_registry.py
apps/agent_worker/: .env.example  Dockerfile  requirements.txt  worker.py
apps/recognition_worker/: worker.py
archive/: README.md  initwyw  template.yaml
client/: gui.py
config/: marvain-example.yaml  marvain_conda.yaml
docs/: 2026-04-13_0534_PDT_remaining_integration_gaps.md  ARCHITECTURE.md  CAPABILITY_MATRIX.generated.md  DESIGN_OBJECTIVE_STATUS.generated.md  GUI_OVERHAUL_PLAN.md  IMPLEMENTATION_STATUS.generated.md  observability_slos.md  still_to_add.md
marvain_cli/: __init__.py  __main__.py  _registry_v2.py  argparse_app.py  cli.py  commands.py  config.py  failure.py  ops.py  simulate.py  smoke.py  typer_app.py
scripts/: backfill_ws_subscriptions.py  backup_notes.md  cleanup_s3_buckets.sh  db_init.py  db_init.sh  generate_capability_matrix.py  generate_design_objective_status.py  generate_implementation_status.py  generate_route_coverage.py  nuke_dev.sh  verify_docs_contracts.py
sql/: 001_init.sql  002_users_and_memberships.sql  003_owner_unique_index.sql  003_remotes.sql  004_agent_tokens.sql  005_users_columns.sql  005_users_columns_and_legacy_cleanup.sql  006_devices_enhancement.sql  007_remotes_to_devices.sql  008_actions_enhancement.sql  009_action_device_execution_lifecycle.sql  010_action_auto_approve_policy.sql  011_device_location.sql  012_rich_memories.sql  013_person_accounts.sql  014_biometrics.sql  015_spaces_livekit_room_mode.sql  016_action_idempotency.sql  017_integration_messages.sql  018_integration_accounts.sql  019_integration_sync_state.sql  020_greenfield_semantic_lifecycle.sql  030_agent_memory_lifecycle_round7.sql
tapdb_templates/: domain_code_registry.json  prefix_ownership_registry.json
tests/: test_action_service.py  test_action_timeout_sweeper.py  test_agent_export_cli.py  test_agent_rejoin.py  test_agent_tokens.py  test_agent_worker_memory_hydration.py  test_agent_worker_visual_truthfulness.py  test_architecture_purity.py  test_audit.py  test_auth_boundaries.py  test_auto_approve_policy.py  test_broadcast.py  test_capability_exposure.py  test_cognito_id_token_validation.py  test_config_loader.py  test_config_path.py  test_contracts.py  test_design_objective_status.py  test_device_command_tool.py  test_devices.py  test_environment_contract.py  test_github_webhook.py  test_gmail_poll.py  test_greenfield_schema.py  test_gui_app.py  test_gui_coming_soon_features.py  test_gui_integration.py  test_gui_round2_routes.py  test_gui_stack_discovery.py  test_hub_api_integration_routes.py  test_hub_api_livekit.py  test_hub_api_memberships.py  test_integrations_gmail.py  test_integrations_provider_modules.py  test_integrations_queue.py  test_integrations_store.py  test_local_smoke.py  test_memberships.py  test_memory_taxonomy.py  test_metrics.py  (+31 more)
(+177 files in other folders)
