[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marvain"
version = "0.3.11"
description = "Marvain repository CLI (Makefile replacement)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "click",
  "pyyaml",
  "typer",
]

[project.scripts]
marvain = "marvain_cli.__main__:main"

[tool.setuptools.packages.find]
include = ["marvain_cli*"]

[tool.marvain]
# This repo is orchestrated via a Conda env (primary) rather than an in-repo venv.
env_manager = "conda"
conda_env = "marvain"
conda_file = "config/marvain_conda.yaml"
python = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "layers/shared/python"]
markers = ["e2e: tests that exercise deployed stack contracts"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
