[build-system]
requires = ["setuptools>=69.0.0", "setuptools-scm[toml]>=8.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marvain"
dynamic = ["version"]
description = "Marvain repository CLI (Makefile replacement)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "amazon-transcribe",
  "boto3",
  "cli-core-yo==2.1.1",
  "daylily-auth-cognito==2.1.5",
  "daylily-tapdb[admin]==6.0.8",
  "fastapi",
  "httpx",
  "insightface",
  "itsdangerous",
  "jinja2",
  "livekit-agents[openai]",
  "livekit-plugins-noise-cancellation",
  "mangum",
  "numpy",
  "onnxruntime",
  "opencv-python",
  "pillow",
  "python-dateutil",
  "python-dotenv",
  "python-jose[cryptography]",
  "python-multipart",
  "pyyaml",
  "requests",
  "resemblyzer",
  "soundfile",
  "uvicorn",
  "websockets",
]

[project.optional-dependencies]
dev = [
  "playwright",
  "pytest",
  "pytest-playwright",
  "ruff",
]

[project.scripts]
marvain = "marvain_cli.__main__:main"

[tool.setuptools.packages.find]
where = [".", "layers/shared/python"]
include = ["marvain_cli*", "agent_hub*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.marvain]
# This repo is orchestrated via a checkout-managed Conda env.
env_manager = "conda"
conda_env = "marvain"
conda_file = "environment.yaml"
python = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "layers/shared/python"]
markers = ["e2e: tests that exercise deployed stack contracts"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
